--- a/frontend/src/styles/NotesPage.module.css
+++ b/frontend/src/styles/NotesPage.module.css
@@ -1,3 +1,14 @@
+.notesPage {
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.notesGrid {
+    width: 100%;
+}
+
 .note {
     height: 200px;
     min-width: 150px;
